<resources>
    <string name="app_name">Ma réu</string>

    // activity_add_meeting
    <string name="meeting_add_title">Titre de la réunion :</string>
    <string name="meeting_add_name">Nom de la réunion</string>
    <string name="meeting_add_begintime">Début de la réunion :</string>
    <string name="meeting_add_endTime">Heure de fin :</string>
    <string name="meeting_add_room">Choisissez votre salle :</string>
    <string name="meeting_add_participant_title">Participants :  %1$x</string>
    <string name="meeting_add_participant">Participants : </string>
    <string name="meeting_add_participant_list">Liste des participants</string>
    <string name="meeting_add_add">AJOUT</string>
    <string name="meeting_add_email_false">Merci d\'indiquer une adresse email valide</string>
    <string name="meeting_add_validate">AJOUTER</string>
    <string name="meeting_add_date">20-10-2022</string>
    <string name="meeting_add_beginHour">16:20</string>
    <string name="meeting_add_endHour">17:05</string>

    // activity_list_meeting
    <string name="meeting_list_add_button">Nouvelle réunion</string>
    <string name="meeting_list_circle_image">Indicateur de réunion</string>
    <string name="meeting_list_exemple_line1">Réunion - 14h00 - Peach</string>
    <string name="meeting_list_exemple_line2">toto@mail.com, tata@mail.fr</string>
    <string name="meeting_list_delete_image">Suprimer la réunion</string>

    // dialog_list_participant
    <string name="dialog_list_participant_email">E-mail</string>
    <string name="dialog_ok">OK</string>

    // option_menu
    <string name="sort">Filtrer</string>
    <string name="by_date">Par date</string>
    <string name="by_room">Par lieu</string>

</resources>