<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_meeting_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/meeting_add_title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_meeting_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="no"
        android:hint="@string/meeting_add_name"
        android:inputType="text"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_begin_time_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_name_title" />

    <TextView
        android:id="@+id/add_meeting_begin_time_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/meeting_add_begintime"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_date_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_name" />

    <Button
        android:id="@+id/add_meeting_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/meeting_add_date"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_duration_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_meeting_hour_button"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_begin_time_title" />

    <Button
        android:id="@+id/add_meeting_hour_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/meeting_add_beginHour"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_duration_title"
        app:layout_constraintLeft_toRightOf="@id/add_meeting_date_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_begin_time_title" />

    <TextView
        android:id="@+id/add_meeting_duration_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/meeting_add_endTime"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_endTime_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_date_button" />

    <Button
        android:id="@+id/add_meeting_endTime_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meeting_add_endHour"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_room_spinner_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_duration_title" />

    <TextView
        android:id="@+id/add_meeting_room_spinner_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/meeting_add_room"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_room_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_hour_button" />

    <Spinner
        android:id="@+id/add_meeting_room_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@id/add_meeting_participant_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_room_spinner_title" />

    <TextView
        android:id="@+id/add_meeting_participant_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/meeting_add_participant"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_room_spinner" />

    <Button
        android:id="@+id/add_meeting_participant_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/meeting_add_participant_list"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_participant_title" />

    <EditText
        android:id="@+id/add_meeting_participant_add_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="no"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/add_meeting_participant_add_button"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_participant_list_button" />

    <Button
        android:id="@+id/add_meeting_participant_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/meeting_add_add"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/add_meeting_participant_add_EditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_participant_list_button" />

    <Button
        android:id="@+id/add_meeting_valid_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/meeting_add_validate"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_meeting_participant_add_button" />

</androidx.constraintlayout.widget.ConstraintLayout>