<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <ImageView
        android:id="@+id/item_meeting_circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:contentDescription="@string/meeting_list_circle_image"
        android:src="@drawable/ic_baseline_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_meeting_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="4dp"
        android:maxLength="34"
        android:text="@string/meeting_list_exemple_line1"
        android:textColor="@color/meeting_list_text"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/item_meeting_emails"
        app:layout_constraintLeft_toRightOf="@id/item_meeting_circle"
        app:layout_constraintTop_toTopOf="@id/item_meeting_circle" />

    <TextView
        android:id="@+id/item_meeting_emails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="50"
        android:text="@string/meeting_list_exemple_line2"
        android:textColor="@color/meeting_list_text"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/item_meeting_name"
        app:layout_constraintTop_toBottomOf="@id/item_meeting_name" />

    <ImageButton
        android:id="@+id/item_meeting_delete_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@null"
        android:contentDescription="@string/meeting_list_delete_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

</androidx.constraintlayout.widget.ConstraintLayout>